reactor blockhound and retry